--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
                 <li>ARTICLES</li>
                 <li>VIDEOS</li>
                 <li>SUBSCRIBE</li>
+		<li>TESTE</li>
             </ul>
         </div>
         <div id="content">
