--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                 <li>ARTICLES</li>
                 <li>VIDEOS</li>
                 <li>SUBSCRIBE</li>
-		<li>TESTE</li>
+		<li>TESTE2</li>
             </ul>
         </div>
         <div id="content">
